🔩 1行入力欄のコンポーネントの作成
